# Light_Years_Game

./: CMakeLists.txt  project_notes.txt
LightYears/: CMakeLists.txt
LightYears/include/: EntryPoint.h
LightYears/include/framework/: App.h
LightYears/src/: main.cpp
LightYears/src/framework/: App.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  App.h  Core.h  World.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  App.cpp  World.cpp
LightYearsGame/: CMakeLists.txt
LightYearsGame/include/gameFramework/: GameApp.h
LightYearsGame/src/gameFramework/: GameApp.cpp
